# Pasta

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
docs/: guide.md
specs/: Pasta.txt
src/main/c/: pasta_internal.h  pasta_lexer.c  pasta_parser.c  pasta_value.c  pasta_writer.c
src/main/h/: pasta.h
src/test/c/: pasta_test.c
src/test/resources/: array_root.pasta  comments.pasta  compact.pasta  complex.pasta  database.pasta  label_values.pasta  labels.pasta  multi_arrays.pasta  multi_maps.pasta  multi_mixed.pasta  multiline.pasta  nested.pasta  quoted_keys.pasta  scalars.pasta  sections.pasta  server.pasta  strings.pasta
